--- a/demos/onoff.html
+++ b/demos/onoff.html
@@ -7,7 +7,7 @@
 	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
-	<title>Wiffle</title>
+	<title>Wiffle: On/off</title>
 	<meta name="description" content="It's responsive!">
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,11 +15,23 @@
 	
 	<link rel="stylesheet" href="../wiffle/wiffle.css">
 	
+	<link rel="stylesheet" href="demo.css">
+	
 	<style>
 		<!--
-			/* Embedded styles here... */
+			p { font-size: 100%; }
 		-->
 	</style>
+	
+	<!-- rgne.ws/PV8KUu -->
+	<!--[if (lt IE 9) & (!IEMobile)]>
+		<script src="plugins/respond.min.js"></script>
+	<![endif]-->
+	
+	<!-- rgne.ws/Orh5cv -->
+	<!--[if lt IE 9]>
+		<script src="plugins/html5shiv.js"></script>
+	<![endif]-->
 	
 </head>
 <body class="debug">
