Some last minute adjustments...

--- a/demos/lines.html
+++ b/demos/lines.html
@@ -82,5 +82,7 @@
 		
 	</div> <!-- /.wiffle -->
 	
+	<script src="plugins/ios-orientationchange-fix.js"></script> <!-- rgne.ws/PYrfbZ -->
+	
 </body>
 </html>
