--- a/demos/onoff.html
+++ b/demos/onoff.html
@@ -155,5 +155,7 @@
 		
 	</div> <!-- /.wiffle -->
 	
+	<script src="plugins/ios-orientationchange-fix.js"></script> <!-- rgne.ws/PYrfbZ -->
+	
 </body>
 </html>
