--- a/demos/index.html
+++ b/demos/index.html
@@ -11,11 +11,12 @@
 	<meta name="description" content="It's responsive!">
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="apple-mobile-weBapp-capable" content="yes">
+	<meta name="apple-mobile-webapp-capable" content="yes">
 	
 	<link rel="stylesheet" href="../wiffle/wiffle.css">
 	
-	<link rel="stylesheet" href="./css/demo.css">
+	<link rel="stylesheet" href="./assets/css/debug.css">
+	<link rel="stylesheet" href="./assets/css/demo.css">
 	
 	<style>
 		<!--
@@ -25,16 +26,16 @@
 	
 	<!-- rgne.ws/PV8KUu -->
 	<!--[if (lt IE 9) & (!IEMobile)]>
-		<script src="plugins/respond.min.js"></script>
+		<script src="./assets/js/respond.min.js"></script>
 	<![endif]-->
 	
 	<!-- rgne.ws/Orh5cv -->
 	<!--[if lt IE 9]>
-		<script src="plugins/html5shiv.js"></script>
+		<script src="./assets/js/html5shiv.js"></script>
 	<![endif]-->
 	
 </head>
-<body class="debug">
+<body>
 	
 	<div class="wiffle">
 		
@@ -1862,7 +1863,7 @@
 		
 	</div> <!-- /.wiffle -->
 	
-	<script src="plugins/ios-orientationchange-fix.js"></script> <!-- rgne.ws/PYrfbZ -->
+	<script src="./assets/js/ios-orientationchange-fix.js"></script> <!-- rgne.ws/PYrfbZ -->
 	
 </body>
 </html>
