--- a/demos/index.html
+++ b/demos/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html>
+<!--[if IE 6]>         <html class="ie6 lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="ie7 lt-ie9 lt-ie8">        <![endif]-->
+<!--[if IE 8]>         <html class="ie8 lt-ie9">               <![endif]-->
+<!--[if gt IE 8]><!--> <html>                                  <!--<![endif]-->
 
 <head>
 	
@@ -13,7 +16,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="apple-mobile-webapp-capable" content="yes">
 	
-	<link rel="stylesheet" href="../wiffle/wiffle.css">
+	<link rel="stylesheet" href="../wiffle/wiffle.min.css">
 	
 	<link rel="stylesheet" href="./assets/css/debug.css">
 	<link rel="stylesheet" href="./assets/css/demo.css">
@@ -1862,8 +1865,6 @@
 		</div> <!-- /.w_wrap -->
 		
 	</div> <!-- /.wiffle -->
-	
-	<script src="./assets/js/ios-orientationchange-fix.js"></script> <!-- rgne.ws/PYrfbZ -->
 	
 </body>
 </html>
